[package]
name = "thunderstorm"
version = "0.1.0"
edition = "2021"

[dependencies]
nt = { git = "https://github.com/itsmeft24/nt-wrapper" }
tokio = { version = "1.26.0", features = ["full"] }

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["image","gfx","static-link","use-vcpkg"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]", "sdl2-gfx"]
git = "https://github.com/microsoft/vcpkg"
rev = "716c3524a54f1f50a25d16a4cdd360f5a7fcc150"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }